<resources>
    <string name="app_name">MyMessenger</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account">Аккаунт</string>
    <string name="phone">+79606558651</string>
    <string name="btn_change_phone_hint">Нажмите, чтобы изменить номер телефона</string>
    <string name="login">MyLogin</string>
    <string name="aboutMe">Обо мне</string>
    <string name="btn_change_login_hint">Нажмите, чтобы изменить логин</string>
    <string name="btn_aboutMe_hint">Напишите немного о себе</string>
    <string name="settings_username">Eugene Alexandrov</string>
    <string name="settings_status">в сети</string>
    <string name="change_name">Изменить имя</string>
    <string name="exit">Выход</string>
    <string name="register_hint_text">Введите номер телефона</string>
    <string name="enter_code_image_discription">Enter code from sms image</string>
    <string name="enter_code_text">Введите код</string>
    <string name="register_send_sms_text">Мы отправили sms с кодом на ваш телефон</string>
    <string name="register_defaultcode_hint">------</string>
    <string name="register_toolbar_text">Ваш телефон</string>
    <string name="register_toast_emptyphonenumber">Введите номер телефона</string>
    <string name="label">Введите номер телефона</string>
    <string name="changename_toast_empty_name">Имя не может быть пустым</string>
    <string name="changename_toast_dataupdate">Данные обновленны</string>
</resources>